<resources>
    
    <string name="server_url">http://pfronhaus.dlinkddns.com:4567/restaurants?</string>
    

    <string name="app_name">FoodFinder</string>
    <string name="msg_view_init">Dein Standort wird abgerufen</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">FoodFinder</string>
    <string name="btn_find_food">Find Food!</string>
    <string name="btn_add_restaurant">Restaurant eintragen</string>
    <string name="err_no_loc_provider">Die Standorterfassung für Dein Mobilgerät ist deaktiviert. Um die App in vollem Umfang nutzen zu können, aktiviere bitte die Standorterfassung in den Einstellungen.</string>
    <string name="err_no_loc">Dein aktueller Standort konnte nicht erfasst werden. Bitte überprüfe die Einstellung für die Standorterfassung und starte die App neu.</string>
    <string name="btn_settings">Einstellungen</string>
    <string name="btn_close">Schliessen</string>
    <string name="msgViewUpdated">Du bist hier:\n %1$s</string>
    <string name="et_dishes">Trage beliebige Gerichte ein</string>
    <string name="cat_label">Kategorien</string>
    <string name="cb1">Fleisch</string>
    <string name="cb2">Fisch</string>
    <string name="cb3">Geflügel</string>
    <string name="cb4">Pasta</string>
    <string name="cb5">Pizza</string>
    <string name="cb6">Gesund</string>
    <string name="cb7">Vegetarisch</string>
    <string name="distance_label">Max. Distanz: </string>
    <string name="seek_text_init">5km</string>
    <string name="seek_text_updated">%1$i km</string>
    <string name="spinner_label">Nationalität/Region</string>
    <string name="btn_search">Suchen</string>
    <string name="dishes_toast">Mehrere Gerichte durch Kommata trennen</string>
    <string name="err_no_connection">Fehler beim Verbinden zum Server</string>
    <string name="categories_label">Kategorien: </string>
    <string name="dishes_label">Gerichte</string>
    <string name="distance_label2">Entfernung: </string>
    <string name="address_label">Adresse</string>
    <string name="searching_restaurants">Restaurants werden gesucht</string>
    <string name="loading_restaurant">Restaurant wird geladen</string>
    <string name="btn_map">Karte anzeigen</string>
    <string name="your_location">Dein Standort</string>
    <string name="back_to_search">Zurück zur Suche</string>
    <string name="err_no_entries">Deine Suche hat leider keine Treffer erzielt.</string>

    <string-array name="regions_array">
        <item></item>
        <item>Deutsch</item>
        <item>Schwäbisch</item>
        <item>Bayrisch</item>
        <item>Italienisch</item>
        <item>Amerikanisch</item>
        <item>Chinesisch</item>
        <item>Vietnamesisch</item>
        <item>Griechisch</item>
        <item></item>
        <item>Afrikanisch</item>
        <item>Australisch</item>
        <item>Französisch</item>
        <item>Englisch</item>
        <item>Indisch</item>
        <item>Koreanisch</item>
        <item>Latein Amerikanisch</item>
        <item>Mexikanisch</item>
        <item>Portugiesisch</item>
        <item>Spanisch</item>
        <item>Thailändisch</item>
        <item>Türkisch</item>
        <item>Ungarisch</item>
        <item>Karibisch</item>
        <item>Osteuropäisch</item>
        <item>Russisch</item>
    </string-array>

</resources>